asm/snapshots/monkey_asm__lower_test__snapshot_aggregates_and_index.snap
---
source: asm/lower_test.rs
expression: "assembly(\"let a = [1, 2];\\nlet h = {\\\"k\\\": a[0]};\\nh[\\\"k\\\"];\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0x2                   // global slot count
    bl rt_globals_init
    // let a = [1, 2];
    sub sp, sp, #16
    movz x0, #0x2                   // 1
    str x0, [sp]                    // element 0
    movz x0, #0x4                   // 2
    str x0, [sp, #8]                // element 1
    add x0, sp, #0                  // element base
    movz x1, #0x2                   // element count
    bl rt_array
    add sp, sp, #16
    adrp x8, g_globals              // let a
    add x8, x8, :lo12:g_globals
    str x0, [x8]
    // let h = {"k": a[0]};
    sub sp, sp, #16
    adrp x0, .Lstr0                 // "k"
    add x0, x0, :lo12:.Lstr0
    movz x1, #0x1                   // byte length
    bl rt_string_from_bytes
    str x0, [sp]                    // key 0
    adrp x8, g_globals              // a
    add x8, x8, :lo12:g_globals
    ldr x0, [x8]
    str x0, [sp, #-16]!             // indexed object
    movz x0, #0                     // 0
    mov x1, x0                      // index
    ldr x0, [sp], #16               // object
    bl rt_index                     // a[0]
    str x0, [sp, #8]                // value 0
    add x0, sp, #0                  // pair base
    movz x1, #0x1                   // pair count
    bl rt_hash
    add sp, sp, #16
    adrp x8, g_globals              // let h
    add x8, x8, :lo12:g_globals
    str x0, [x8, #8]
    adrp x8, g_globals              // h
    add x8, x8, :lo12:g_globals
    ldr x0, [x8, #8]
    str x0, [sp, #-16]!             // indexed object
    adrp x0, .Lstr0                 // "k"
    add x0, x0, :lo12:.Lstr0
    movz x1, #0x1                   // byte length
    bl rt_string_from_bytes
    mov x1, x0                      // index
    ldr x0, [sp], #16               // object
    bl rt_index                     // h["k"]
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .section .rodata
.Lstr0:                             // "k"
    .byte 0x6b

    .bss
    .balign 8
g_globals:                          // 2 global slot(s)
    .skip 16
