asm/snapshots/monkey_asm__lower_test__snapshot_boxed_integer_literal.snap
---
source: asm/lower_test.rs
expression: "assembly(\"9223372036854775807;\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0                     // global slot count
    bl rt_globals_init
    movz x0, #0xffff                // 9223372036854775807 (beyond SMI)
    movk x0, #0xffff, lsl #16
    movk x0, #0xffff, lsl #32
    movk x0, #0x7fff, lsl #48
    bl rt_box_int
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .bss
    .balign 8
g_globals:                          // 0 global slot(s)
    .skip 0
