asm/snapshots/monkey_asm__lower_test__snapshot_builtins_first_class.snap
---
source: asm/lower_test.rs
expression: "assembly(\"let p = puts; p(len(\\\"abc\\\"));\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0x1                   // global slot count
    bl rt_globals_init
    // let p = puts;
    movz x0, #0xd                   // builtin puts
    adrp x8, g_globals              // let p
    add x8, x8, :lo12:g_globals
    str x0, [x8]
    // p(len("abc"))
    sub sp, sp, #16
    adrp x8, g_globals              // p
    add x8, x8, :lo12:g_globals
    ldr x0, [x8]
    str x0, [sp]                    // callee
    // len("abc")
    sub sp, sp, #16
    movz x0, #0x5                   // builtin len
    str x0, [sp]                    // callee
    adrp x0, .Lstr0                 // "abc"
    add x0, x0, :lo12:.Lstr0
    movz x1, #0x3                   // byte length
    bl rt_string_from_bytes
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // callee
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl rt_call
    add sp, sp, #16
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // callee
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl rt_call
    add sp, sp, #16
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .section .rodata
.Lstr0:                             // "abc"
    .byte 0x61, 0x62, 0x63

    .bss
    .balign 8
g_globals:                          // 1 global slot(s)
    .skip 8
