asm/snapshots/monkey_asm__lower_test__snapshot_classes.snap
---
source: asm/lower_test.rs
expression: "assembly(\"class Counter {\\n  constructor(start) { this.count = start; }\\n  inc() { this.count = this.count + 1; this.count }\\n}\\nlet c = new Counter(5);\\nc.inc();\\nc.count;\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0x2                   // global slot count
    bl rt_globals_init
    // class Counter
    adrp x0, .Lstr0                 // Counter
    add x0, x0, :lo12:.Lstr0
    movz x1, #0x7
    bl rt_class
    str x0, [sp, #-16]!             // class value
    adrp x0, .Lfn0                  // Counter.constructor(this, start)
    add x0, x0, :lo12:.Lfn0
    movz x1, #0x2                   // num_parameters
    add x2, sp, #0                  // captured values
    movz x3, #0                     // num_free
    bl rt_closure
    mov x3, x0                      // method closure
    ldr x0, [sp]                    // class value (kept pushed)
    adrp x1, .Lstr2                 // constructor
    add x1, x1, :lo12:.Lstr2
    movz x2, #0xb
    movz x4, #0x1                   // is_ctor
    bl rt_class_add_method
    adrp x0, .Lfn1                  // Counter.inc(this)
    add x0, x0, :lo12:.Lfn1
    movz x1, #0x1                   // num_parameters
    add x2, sp, #0                  // captured values
    movz x3, #0                     // num_free
    bl rt_closure
    mov x3, x0                      // method closure
    ldr x0, [sp]                    // class value (kept pushed)
    adrp x1, .Lstr3                 // inc
    add x1, x1, :lo12:.Lstr3
    movz x2, #0x3
    movz x4, #0                     // is_ctor
    bl rt_class_add_method
    ldr x0, [sp], #16               // class value
    adrp x8, g_globals              // class Counter
    add x8, x8, :lo12:g_globals
    str x0, [x8]
    // let c = new Counter(5);
    // new Counter(5)
    sub sp, sp, #16
    adrp x8, g_globals              // Counter
    add x8, x8, :lo12:g_globals
    ldr x0, [x8]
    str x0, [sp]                    // class
    movz x0, #0xa                   // 5
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // class
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl rt_construct
    add sp, sp, #16
    adrp x8, g_globals              // let c
    add x8, x8, :lo12:g_globals
    str x0, [x8, #8]
    // c.inc()
    sub sp, sp, #16
    adrp x8, g_globals              // c
    add x8, x8, :lo12:g_globals
    ldr x0, [x8, #8]
    adrp x1, .Lstr3                 // inc
    add x1, x1, :lo12:.Lstr3
    movz x2, #0x3
    bl rt_get_property              // .inc
    str x0, [sp]                    // callee
    ldr x0, [sp]                    // callee
    movz x1, #0                     // argc
    add x2, sp, #8                  // argv
    bl rt_call
    add sp, sp, #16
    adrp x8, g_globals              // c
    add x8, x8, :lo12:g_globals
    ldr x0, [x8, #8]
    adrp x1, .Lstr1                 // count
    add x1, x1, :lo12:.Lstr1
    movz x2, #0x5
    bl rt_get_property              // .count
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

.Lfn0:                              // Counter.constructor(this, start)
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    sub sp, sp, #48
    stur x0, [x29, #-16]            // closure (hidden argument)
    stur x1, [x29, #-32]            // this
    stur x2, [x29, #-48]            // start
    // this.count = start;
    ldur x0, [x29, #-32]            // this
    str x0, [sp, #-16]!             // object
    ldur x0, [x29, #-48]            // start
    mov x3, x0                      // value
    ldr x0, [sp], #16               // object
    adrp x1, .Lstr1                 // count
    add x1, x1, :lo12:.Lstr1
    movz x2, #0x5
    bl rt_set_property
    movz x0, #0xb                   // empty/valueless block: null
    ldur x0, [x29, #-32]            // constructor returns this
.Lfn0_ret:
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

.Lfn1:                              // Counter.inc(this)
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    sub sp, sp, #32
    stur x0, [x29, #-16]            // closure (hidden argument)
    stur x1, [x29, #-32]            // this
    // this.count = this.count + 1;
    ldur x0, [x29, #-32]            // this
    str x0, [sp, #-16]!             // object
    ldur x0, [x29, #-32]            // this
    adrp x1, .Lstr1                 // count
    add x1, x1, :lo12:.Lstr1
    movz x2, #0x5
    bl rt_get_property              // .count
    str x0, [sp, #-16]!             // left operand
    movz x0, #0x2                   // 1
    mov x1, x0                      // right operand
    ldr x0, [sp], #16               // left operand
    orr x8, x0, x1                  // SMI check on both bit0
    tbnz x8, #0, .L0
    adds x8, x0, x1                 // (a<<1)+(b<<1) = (a+b)<<1
    bvs .L0
    mov x0, x8
    b .L1
.L0:
    bl rt_add                       // this.count + 1
.L1:
    mov x3, x0                      // value
    ldr x0, [sp], #16               // object
    adrp x1, .Lstr1                 // count
    add x1, x1, :lo12:.Lstr1
    movz x2, #0x5
    bl rt_set_property
    ldur x0, [x29, #-32]            // this
    adrp x1, .Lstr1                 // count
    add x1, x1, :lo12:.Lstr1
    movz x2, #0x5
    bl rt_get_property              // .count
.Lfn1_ret:
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .section .rodata
.Lstr0:                             // "Counter"
    .byte 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x65, 0x72
.Lstr1:                             // "count"
    .byte 0x63, 0x6f, 0x75, 0x6e, 0x74
.Lstr2:                             // "constructor"
    .byte 0x63, 0x6f, 0x6e, 0x73, 0x74, 0x72, 0x75, 0x63, 0x74, 0x6f, 0x72
.Lstr3:                             // "inc"
    .byte 0x69, 0x6e, 0x63

    .bss
    .balign 8
g_globals:                          // 2 global slot(s)
    .skip 16
