asm/snapshots/monkey_asm__lower_test__snapshot_closure_capture.snap
---
source: asm/lower_test.rs
expression: "assembly(\"let adder = fn(x) { fn(y) { x + y } };\\nadder(1)(2);\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0x1                   // global slot count
    bl rt_globals_init
    // let adder = fn(x) { fn(y) { x + y } };
    adrp x0, .Lfn0                  // fn adder(x)
    add x0, x0, :lo12:.Lfn0
    movz x1, #0x1                   // num_parameters
    add x2, sp, #0                  // captured values
    movz x3, #0                     // num_free
    bl rt_closure
    adrp x8, g_globals              // let adder
    add x8, x8, :lo12:g_globals
    str x0, [x8]
    // adder(1)(2)
    sub sp, sp, #16
    // adder(1)
    sub sp, sp, #16
    adrp x8, g_globals              // adder
    add x8, x8, :lo12:g_globals
    ldr x0, [x8]
    str x0, [sp]                    // callee
    movz x0, #0x2                   // 1
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // callee
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl rt_call
    add sp, sp, #16
    str x0, [sp]                    // callee
    movz x0, #0x4                   // 2
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // callee
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl rt_call
    add sp, sp, #16
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

.Lfn1:                              // fn(y)
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    sub sp, sp, #32
    stur x0, [x29, #-16]            // closure (hidden argument)
    stur x1, [x29, #-32]            // y
    ldur x0, [x29, #-16]            // current closure
    movz x1, #0                     // free variable x
    bl rt_get_free
    str x0, [sp, #-16]!             // left operand
    ldur x0, [x29, #-32]            // y
    mov x1, x0                      // right operand
    ldr x0, [sp], #16               // left operand
    orr x8, x0, x1                  // SMI check on both bit0
    tbnz x8, #0, .L0
    adds x8, x0, x1                 // (a<<1)+(b<<1) = (a+b)<<1
    bvs .L0
    mov x0, x8
    b .L1
.L0:
    bl rt_add                       // x + y
.L1:
.Lfn1_ret:
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

.Lfn0:                              // fn adder(x)
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    sub sp, sp, #32
    stur x0, [x29, #-16]            // closure (hidden argument)
    stur x1, [x29, #-32]            // x
    sub sp, sp, #16
    ldur x0, [x29, #-32]            // x
    str x0, [sp]                    // capture x
    adrp x0, .Lfn1                  // fn(y)
    add x0, x0, :lo12:.Lfn1
    movz x1, #0x1                   // num_parameters
    add x2, sp, #0                  // captured values
    movz x3, #0x1                   // num_free
    bl rt_closure
    add sp, sp, #16
.Lfn0_ret:
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .bss
    .balign 8
g_globals:                          // 1 global slot(s)
    .skip 8
