asm/snapshots/monkey_asm__lower_test__snapshot_debugger_transparency.snap
---
source: asm/lower_test.rs
expression: "assembly(\"let f = fn(n) { n * 2; debugger; };\\ndebugger;\\nputs(f(21));\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0x1                   // global slot count
    bl rt_globals_init
    // let f = fn(n) { n * 2; debugger; };
    adrp x0, .Lfn0                  // fn f(n)
    add x0, x0, :lo12:.Lfn0
    movz x1, #0x1                   // num_parameters
    add x2, sp, #0                  // captured values
    movz x3, #0                     // num_free
    bl rt_closure
    adrp x8, g_globals              // let f
    add x8, x8, :lo12:g_globals
    str x0, [x8]
    // debugger (no-op in AOT build)
    // puts(f(21))
    sub sp, sp, #16
    movz x0, #0xd                   // builtin puts
    str x0, [sp]                    // callee
    // f(21)
    sub sp, sp, #16
    adrp x8, g_globals              // f
    add x8, x8, :lo12:g_globals
    ldr x0, [x8]
    str x0, [sp]                    // callee
    movz x0, #0x2a                  // 21
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // callee
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl rt_call
    add sp, sp, #16
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // callee
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl rt_call
    add sp, sp, #16
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

.Lfn0:                              // fn f(n)
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    sub sp, sp, #32
    stur x0, [x29, #-16]            // closure (hidden argument)
    stur x1, [x29, #-32]            // n
    ldur x0, [x29, #-32]            // n
    str x0, [sp, #-16]!             // left operand
    movz x0, #0x4                   // 2
    mov x1, x0                      // right operand
    ldr x0, [sp], #16               // left operand
    bl rt_mul                       // n * 2
    // debugger (no-op in AOT build)
.Lfn0_ret:
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .bss
    .balign 8
g_globals:                          // 1 global slot(s)
    .skip 8
