asm/snapshots/monkey_asm__lower_test__snapshot_global_rebinding.snap
---
source: asm/lower_test.rs
expression: "assembly(\"let x = 1; let x = x + 2; x;\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0x2                   // global slot count
    bl rt_globals_init
    // let x = 1;
    movz x0, #0x2                   // 1
    adrp x8, g_globals              // let x
    add x8, x8, :lo12:g_globals
    str x0, [x8]
    // let x = x + 2;
    adrp x8, g_globals              // x
    add x8, x8, :lo12:g_globals
    ldr x0, [x8, #8]
    str x0, [sp, #-16]!             // left operand
    movz x0, #0x4                   // 2
    mov x1, x0                      // right operand
    ldr x0, [sp], #16               // left operand
    orr x8, x0, x1                  // SMI check on both bit0
    tbnz x8, #0, .L0
    adds x8, x0, x1                 // (a<<1)+(b<<1) = (a+b)<<1
    bvs .L0
    mov x0, x8
    b .L1
.L0:
    bl rt_add                       // x + 2
.L1:
    adrp x8, g_globals              // let x
    add x8, x8, :lo12:g_globals
    str x0, [x8, #8]
    adrp x8, g_globals              // x
    add x8, x8, :lo12:g_globals
    ldr x0, [x8, #8]
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .bss
    .balign 8
g_globals:                          // 2 global slot(s)
    .skip 16
