asm/snapshots/monkey_asm__lower_test__snapshot_if_else_and_comparison.snap
---
source: asm/lower_test.rs
expression: "assembly(\"if (1 < 2) { 10 } else { 20 };\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl main
    .p2align 2
main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals
    add x0, x0, :lo12:g_globals
    movz x1, #0                     // global slot count
    bl rt_globals_init
    movz x0, #0x4                   // 2
    str x0, [sp, #-16]!             // right operand (swapped <)
    movz x0, #0x2                   // 1
    mov x1, x0                      // left operand
    ldr x0, [sp], #16               // right operand
    bl rt_gt                        // 1 < 2
    bl rt_truthy                    // if (1 < 2)
    cbz x0, .L0
    movz x0, #0x14                  // 10
    b .L1
.L0:
    movz x0, #0x28                  // 20
.L1:
.Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .bss
    .balign 8
g_globals:                          // 0 global slot(s)
    .skip 0
