asm/snapshots/monkey_asm__lower_test__snapshot_macho_dialect.snap
---
source: asm/lower_test.rs
expression: "macho_assembly(\"let msg = \\\"hé\\\";\\nlet inc = fn(n) { n + 1 };\\nif (inc(1) < 3) { msg } else { \\\"no\\\" };\")"
---
// Generated by monkey-asm (docs/arm64-asm-backend-design.md). Do not edit.
    .text
    .globl _main
    .p2align 2
_main:
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    adrp x0, g_globals@PAGE
    add x0, x0, g_globals@PAGEOFF
    movz x1, #0x2                   // global slot count
    bl _rt_globals_init
    // let msg = "hé";
    adrp x0, Lstr0@PAGE             // "hé"
    add x0, x0, Lstr0@PAGEOFF
    movz x1, #0x3                   // byte length
    bl _rt_string_from_bytes
    adrp x8, g_globals@PAGE         // let msg
    add x8, x8, g_globals@PAGEOFF
    str x0, [x8]
    // let inc = fn(n) { n + 1 };
    adrp x0, Lfn0@PAGE              // fn inc(n)
    add x0, x0, Lfn0@PAGEOFF
    movz x1, #0x1                   // num_parameters
    add x2, sp, #0                  // captured values
    movz x3, #0                     // num_free
    bl _rt_closure
    adrp x8, g_globals@PAGE         // let inc
    add x8, x8, g_globals@PAGEOFF
    str x0, [x8, #8]
    // inc(1)
    sub sp, sp, #16
    adrp x8, g_globals@PAGE         // inc
    add x8, x8, g_globals@PAGEOFF
    ldr x0, [x8, #8]
    str x0, [sp]                    // callee
    movz x0, #0x2                   // 1
    str x0, [sp, #8]                // arg 0
    ldr x0, [sp]                    // callee
    movz x1, #0x1                   // argc
    add x2, sp, #8                  // argv
    bl _rt_call
    add sp, sp, #16
    str x0, [sp, #-16]!             // left operand
    movz x0, #0x6                   // 3
    ldr x1, [sp], #16               // left operand
    bl _rt_gt                       // inc(1) < 3
    bl _rt_truthy                   // if (inc(1) < 3)
    cbz x0, L2
    adrp x8, g_globals@PAGE         // msg
    add x8, x8, g_globals@PAGEOFF
    ldr x0, [x8]
    b L3
L2:
    adrp x0, Lstr1@PAGE             // "no"
    add x0, x0, Lstr1@PAGEOFF
    movz x1, #0x2                   // byte length
    bl _rt_string_from_bytes
L3:
Lmain_exit:
    mov w0, #0                      // exit code is never the tagged value
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

Lfn0:                               // fn inc(n)
    stp x29, x30, [sp, #-16]!
    mov x29, sp
    sub sp, sp, #32
    stur x0, [x29, #-16]            // closure (hidden argument)
    stur x1, [x29, #-32]            // n
    ldur x0, [x29, #-32]            // n
    str x0, [sp, #-16]!             // left operand
    movz x0, #0x2                   // 1
    mov x1, x0                      // right operand
    ldr x0, [sp], #16               // left operand
    orr x8, x0, x1                  // SMI check on both bit0
    tbnz x8, #0, L0
    adds x8, x0, x1                 // (a<<1)+(b<<1) = (a+b)<<1
    bvs L0
    mov x0, x8
    b L1
L0:
    bl _rt_add                      // n + 1
L1:
Lfn0_ret:
    mov sp, x29
    ldp x29, x30, [sp], #16
    ret

    .section __TEXT,__const
Lstr0:                              // "hé"
    .byte 0x68, 0xc3, 0xa9
Lstr1:                              // "no"
    .byte 0x6e, 0x6f

    .zerofill __DATA,__bss,g_globals,16,3 // 2 global slot(s)
